# remax

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bench/: bench_dtype.py  crossover.py  embed_jina.py  eval_beir.py  eval_jina.py  fetch_gemini_cache.sh  fetch_jina_v5_scifact_cache.sh  fetch_nfcorpus.sh  fetch_specter2_cache.sh  jina_smoke.py  run_baseline.py  run_bm25_sketch.py  run_itq_experiment.py  run_rerank.py  run_topn_sweep.py  sketch_matryoshka.py  smoke_1bit.py  smoke_stacked.py
bench/results/: BASELINE.md  BM25_FOLLOWUP.md  BM25_SKETCH.md  CROSSOVER.md  ITQ.md  JINA_V5_BEIR.md  RERANK.md  SKETCH_MATRYOSHKA.md  SKETCH_MATRYOSHKA_GEMINI.md  crossover.csv  jina_v5_beir.csv
docs/: postgres-recipe.md  specter2-search-pipeline.md
src/remax/: __init__.py  _native.py  bm25.py  characterize.py  core.py  corpus.py  itq.py  packing.py  rotation.py  sparse.py  stacked.py
src/remax/bench/: __init__.py  bm25_sketch.py  crossover.py  datasets.py  eval.py  ranking.py  rerank.py  run_baseline.py  run_itq.py  run_rerank.py  run_topn_sweep.py
tests/: test_bench_bm25_sketch.py  test_bench_crossover.py  test_bench_datasets.py  test_bench_eval.py  test_bench_ranking.py  test_bench_rerank.py  test_bench_run_baseline.py  test_bench_run_itq.py  test_bench_run_rerank.py  test_bench_run_topn_sweep.py  test_bm25.py  test_characterize.py  test_core.py  test_corpus.py  test_hardening.py  test_itq.py  test_native.py  test_sparse.py  test_sparse_postings.py  test_stacked.py
