[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remax"
version = "0.0.0"
description = "Rank-correct cosine LSH with a stacked-precision ladder."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Oskar Austegard"}]
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
bench = ["sentence-transformers", "matplotlib", "remex>=0.5.1"]
rerank = ["onnxruntime", "tokenizers", "huggingface_hub"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["remax*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/oaustegard/remax"
Repository = "https://github.com/oaustegard/remax"
Issues = "https://github.com/oaustegard/remax/issues"
Blog = "https://muninn.austegard.com/blog/one-bit-beats-two.html"
